--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,3 +1,7 @@
+@import url("https://fonts.googleapis.com/css2?family=Red+Hat+Display:ital,wght@0,300..900;1,300..900&display=swap");
+
+$font-redhat: "Red Hat Display", sans-serif;
+
 $colorBackground: grey;
 $blue-50: oklch(0.9774 0.0105 271.31);
 $blue-100: oklch(0.9323 0.0322 271.06);
@@ -5,35 +9,60 @@ $blue-700: oklch(0.455 0.2558 273.12);
 $blue-950: oklch(0.3125 0.074 266.01);
 $gray-600: oklch(0.603 0.0615 269.01);
 
-@use "../../node_modules/utopia-core-scss/src/utopia" as utopia;
+// font size 14px-24px
+$step--2: clamp(0.6076rem, 0.4836rem + 0.5294vw, 0.96rem);
+$step--1: clamp(0.7292rem, 0.5634rem + 0.7074vw, 1.2rem);
+$step-0: clamp(0.875rem, 0.6549rem + 0.939vw, 1.5rem);
+$step-1: clamp(1.05rem, 0.7595rem + 1.2394vw, 1.875rem);
+$step-2: clamp(1.26rem, 0.8784rem + 1.6282vw, 2.3438rem);
+$step-3: clamp(1.512rem, 1.0128rem + 2.1299vw, 2.9297rem);
+$step-4: clamp(1.8144rem, 1.1638rem + 2.7759vw, 3.6621rem);
+$step-5: clamp(2.1773rem, 1.3321rem + 3.6062vw, 4.5776rem);
 
-/* @link https://utopia.fyi/type/calculator?c=375,14,1.2,1440,24,1.25,5,2,&s=0.75|0.5|0.25,1.5|2|3|4|6,s-l&g=s,l,xl,12 */
+// spacing
+$space-3xs: clamp(0.25rem, 0.206rem + 0.1878vw, 0.375rem);
+$space-2xs: clamp(0.4375rem, 0.3275rem + 0.4695vw, 0.75rem);
+$space-xs: clamp(0.6875rem, 0.5335rem + 0.6573vw, 1.125rem);
+$space-s: clamp(0.875rem, 0.6549rem + 0.939vw, 1.5rem);
+$space-m: clamp(1.3125rem, 0.9824rem + 1.4085vw, 2.25rem);
+$space-l: clamp(1.75rem, 1.3099rem + 1.8779vw, 3rem);
+$space-xl: clamp(2.625rem, 1.9648rem + 2.8169vw, 4.5rem);
+$space-2xl: clamp(3.5rem, 2.6197rem + 3.7559vw, 6rem);
+$space-3xl: clamp(5.25rem, 3.9296rem + 5.6338vw, 9rem);
 
-:root {
-  @include utopia.generateTypeScale(
-    (
-      "minWidth": 375,
-      "maxWidth": 1440,
-      "minFontSize": 14,
-      "maxFontSize": 24,
-      "minTypeScale": 1.2,
-      "maxTypeScale": 1.25,
-      "positiveSteps": 5,
-      "negativeSteps": 2,
-      "prefix": "step-",
-      "relativeTo": "viewport-width"
-    )
-  );
-}
+/* One-up pairs */
+$space-3xs-2xs: clamp(0.25rem, 0.0739rem + 0.7512vw, 0.75rem);
+$space-2xs-xs: clamp(0.4375rem, 0.1954rem + 1.0329vw, 1.125rem);
+$space-xs-s: clamp(0.6875rem, 0.4014rem + 1.2207vw, 1.5rem);
+$space-s-m: clamp(0.875rem, 0.3908rem + 2.0657vw, 2.25rem);
+$space-m-l: clamp(1.3125rem, 0.7183rem + 2.5352vw, 3rem);
+$space-l-xl: clamp(1.75rem, 0.7817rem + 4.1315vw, 4.5rem);
+$space-xl-2xl: clamp(2.625rem, 1.4366rem + 5.0704vw, 6rem);
+$space-2xl-3xl: clamp(3.5rem, 1.5634rem + 8.2629vw, 9rem);
 
-@mixin flexCenter {
+// spacing
+
+@mixin flexCenter() {
   display: flex;
   justify-content: center;
   align-items: center;
+  min-height: 100vh;
+}
+
+html {
+  box-sizing: border-box;
+}
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  padding: 0;
+  margin: 0;
 }
 
 body {
   background-color: $blue-100;
+  font-family: $font-redhat;
 }
 
 body::before {
@@ -42,7 +71,7 @@ body::before {
   position: fixed;
   top: 0;
   left: 0;
-  min-height: 35%;
+  min-height: 25%;
   width: 100%;
   z-index: -1;
   background-size: cover;
@@ -53,5 +82,53 @@ body::before {
 
 main {
   @include flexCenter();
-  min-height: 100vh;
+
+  section {
+    text-align: center;
+    background: $blue-50;
+    border-radius: 15px;
+    margin-inline: 1.3rem;
+    img {
+      width: 100%;
+      max-width: 100%;
+      border-radius: 10px 10px 0px 0px;
+    }
+    h3 {
+      font-size: $step-2;
+      font-weight: 800;
+      margin-block: $space-m;
+    }
+    div {
+      display: flex;
+      justify-content: space-around;
+      align-items: center;
+      background-color: $blue-100;
+      margin-inline: 1rem;
+      border-radius: 15px;
+
+      p {
+        padding-top: 1rem;
+      }
+      img {
+        width: 17%;
+        max-width: 17%;
+      }
+    }
+
+    button{
+      background-color: $blue-700;
+      color: $blue-100;
+      margin-block: $space-m;
+      padding-inline: $space-3xl;
+      padding-block: $space-xs;
+      border-style:none;
+      border-radius: $space-2xs;
+      font-weight: 700;
+    }
+    p {
+      color: $gray-600;
+      font-weight: 500;
+      margin-bottom: $space-m;
+    }
+  }
 }
