mengerjakan annual plan

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -98,37 +98,56 @@ main {
       font-weight: 800;
       margin-block: $space-m;
     }
+    p:first-of-type {
+      padding-inline: $space-xl-2xl;
+    }
     div {
       display: flex;
-      justify-content: space-around;
+      justify-content: space-evenly;
       align-items: center;
       background-color: $blue-100;
-      margin-inline: 1rem;
+      margin-inline: 0.54rem;
+      // padding-inline:2rem ;
       border-radius: 15px;
 
-      p {
-        padding-top: 1rem;
+      div {
+        display: flex;
+        justify-content: start;
+        img {
+          width: 17%;
+          max-width: 17%;
+        }
+        p {
+          padding-top: 1rem;
+        }
       }
-      img {
-        width: 17%;
-        max-width: 17%;
+
+      a {
+        color: $blue-700;
+        font-weight: 800;
+        text-decoration: underline;
       }
     }
 
-    button{
+    button {
       background-color: $blue-700;
       color: $blue-100;
       margin-block: $space-m;
-      padding-inline: $space-3xl;
+      width: 90%;
+      max-width: 90%;
       padding-block: $space-xs;
-      border-style:none;
+      border-style: none;
       border-radius: $space-2xs;
       font-weight: 700;
+      box-shadow: 0 10px 20px $gray-600;
     }
     p {
       color: $gray-600;
       font-weight: 500;
       margin-bottom: $space-m;
+    }
+    .cancel-order {
+      font-weight: 800;
     }
   }
 }
