feat: desain mobile dan desain monitor

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,12 +2,17 @@
 
 $font-redhat: "Red Hat Display", sans-serif;
 
+$breakpoint-480: 480px;
+$breakpoint-768: 768px;
+$size-17px: 17px;
+
 $colorBackground: grey;
 $blue-50: oklch(0.9774 0.0105 271.31);
 $blue-100: oklch(0.9323 0.0322 271.06);
 $blue-700: oklch(0.455 0.2558 273.12);
 $blue-950: oklch(0.3125 0.074 266.01);
 $gray-600: oklch(0.603 0.0615 269.01);
+$purple: oklch(0.6094 0.1931 282.42);
 
 // font size 14px-24px
 $step--2: clamp(0.6076rem, 0.4836rem + 0.5294vw, 0.96rem);
@@ -87,12 +92,12 @@ main {
   section {
     text-align: center;
     background: $blue-50;
-    border-radius: 15px;
+    border-radius: $space-m;
     margin-inline: 1.3rem;
     img {
       width: 100%;
       max-width: 100%;
-      border-radius: 10px 10px 0px 0px;
+      border-radius: $space-m $space-m 0px 0px;
     }
     h3 {
       font-size: $step-2;
@@ -121,7 +126,7 @@ main {
           font-weight: 700;
           width: 178%;
           max-width: 178%;
-          span{
+          span {
             font-weight: 400;
           }
         }
@@ -146,6 +151,9 @@ main {
       border-radius: $space-2xs;
       font-weight: 700;
       box-shadow: 0 10px 20px $gray-600;
+      &:hover {
+        background-color: $purple;
+      }
     }
     p {
       color: $gray-600;
@@ -154,6 +162,41 @@ main {
     }
     .cancel-order {
       font-weight: 800;
+    }
+  }
+  @media (min-width: $breakpoint-480) {
+    section {
+      width: 400px;
+      max-width: 400px;
+      margin-block: 2rem;
+      h3 {
+        font-size: 24px;
+        margin-block: 15px;
+      }
+      p {
+        font-size: $size-17px;
+        margin-bottom: $space-s;
+      }
+      p:first-of-type {
+        padding-inline: $space-xl;
+      }
+      div {
+        margin-inline: 2rem;
+        div {
+          span {
+            font-size: $size-17px;
+            width: 190%;
+          }
+        }
+        a {
+          font-size: $size-17px;
+        }
+      }
+    }
+  }
+  @media (min-width: $breakpoint-768) {
+    section {
+      margin-block: 20px;
     }
   }
 }
