--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -164,7 +164,14 @@ main {
       font-weight: 800;
     }
   }
-  @media (min-width: $breakpoint-480) {
+}
+
+@media (min-width: $breakpoint-480) {
+  body::before {
+    min-height: 70%;
+    background-position: bottom;
+  }
+  main {
     section {
       width: 400px;
       max-width: 400px;
@@ -194,7 +201,9 @@ main {
       }
     }
   }
-  @media (min-width: $breakpoint-768) {
+}
+@media (min-width: $breakpoint-768) {
+  main {
     section {
       margin-block: 20px;
     }
