--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -54,6 +54,10 @@ $space-2xl-3xl: clamp(3.5rem, 1.5634rem + 8.2629vw, 9rem);
   min-height: 100vh;
 }
 
+.hidden{
+  display: none;
+}
+
 html {
   box-sizing: border-box;
 }
@@ -167,6 +171,7 @@ main {
 
   .thank-you {
     background-color: $blue-50;
+    display: none;
 
     button{
       margin-block: 0;
